--- a/homeStyle.css
+++ b/homeStyle.css
@@ -1,23 +1,44 @@
+/*File name: homeStyle.css*/
+/*This file is used to style all index.html information.html, hobbies.html,travel.html */
+/*Author: CHAOS*/
+/*2017/3/28*/
+
 body{
 	background-color: #dddddd;
 }
-
 body,ul{
 	/*cancel the default margin*/
 	margin: 0px;
 	font-size: 14px;
+	/*set font and text color*/
 	color: white;
-	/*font-family: proxima-nova, arial, sans-serif;*/
+	font-family: proxima-nova,"Microsoft YaHei", arial, sans-serif;
 	text-shadow:3px 3px 4px rgba(151,24,64,0.2);
 }
-a{
+a{	/*clean the decoration*/
 	text-decoration: none;
 }
-/*-------------Navigation Bar-------------------*/
+
+/*set the style of the hyperlink*/
+a:active{
+	color: #b2dfdb;
+}
+a:link{
+	color: #1de9b6;
+}
+a:hover{
+	color: #a7ffed;
+}
+a:visited{
+	color: #00bfa5;
+}
+
+/*----------------------------Navigation Bar-------------------*/
 .topNavBar{
 	/*set up the flex box model, background
 	for the Top navigation bar*/
 	display: inline-flex;
+	display: -webkit-inline-flex;
 	background-color: #00bcd4;
 	padding: 8px 0px;
 	width: 100%;
@@ -26,22 +47,24 @@ a{
 	box-shadow: 3px 3px 4px rgba(151,24,64,0.2);
 }
 .topNavBar li{
+	/*set the child to sideway and center*/
 	display: inline-flex;
+	display: -webkit-inline-flex;
 	vertical-align: middle;
 }
 ul.topNavBar > li > div, ul.topNavBar>li>ul>li>a{
 	color: white;
-	text-shadow:3px 3px 4px rgba(151,24,64,0.2);
+	text-shadow:3px 3px 4px rgba(151,24,64,0.2);	/*Set the shadow of text*/
 }
 
 ul.topNavBar>li>ul>li>a{
 	font-weight: bold;
-	transition: all 0.6s ease;
+	transition: all 0.6s ease;				/*set the animation*/
 	-moz-transition: all 0.6s ease;			/*for Firefox 4*/
 	-webkit-transition: all 0.6s ease;		/*for safari and Chrome*/
 	-o-transition: all 0.6s ease;			/*for Opera*/
 }
-ul.topNavBar>li>ul>li>a:hover{
+ul.topNavBar>li>ul>li>a:hover{						/*set the attribute when mouse over the select element*/
 	color: #d1d1d1;
 	text-shadow:1px 1px 2px rgba(151,24,64,0.2);
 }
@@ -54,67 +77,63 @@ ul.topNavBar>li>ul>li>a:hover{
 	font-size: 0.8em;
 }
 
-.vertical{
-	flex-direction: column;
-}
 li.vertical{
+	/*set the class that can make child vertical*/
 	justify-content: space-around;
+	-moz-justify-content: space-around;
+	-webkit-justify-content: space-around;
+
+	flex-direction: column;
+	-ms-flex-direction: column;
+	-webkit-flex-direction: column;
+	-moz-flex-direction: column;
 }
 
 
 #ProfilePhoto img{
+	/*set the photo to rounded square and shadow*/
 	box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.27);
 	width: 48px;
 	border-radius: 30%;
 	margin: 0px 16px 0px 24px;
 	vertical-align: middle;
 	align-items: center;
+	-webkit-align-items: center;
+
 	transition: all 0.6s ease;
 	-moz-transition: all 0.6s ease;
 	-webkit-transition: all 0.6s ease;
 	-o-transition: all 0.6s ease;
 }
 #ProfilePhoto img:hover{
+	/*set the animation of shadow*/
 	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.27);
 }
 
-
-
-
+/*set the top menu*/
 li.mainNavBar{
 	/*vertical-align: middle;*/
 	display: flex;
+	display: -webkit-flex;
 	flex: auto;
+	-webkit-flex: auto;
+	-ms-flex: auto;
 	align-items: center;
+	-webkit-align-items: center;
 	justify-content: flex-end;
-	/*position: absolute;
-	right: 4px;
-	top:28px;*/
+	-webkit-justify-content: flex-end;
+	-moz-justify-content: flex-end;
 }
 ul.navBottum li{
-	/*set the margin of 
-	up down to 0 px
-	left right to 32 px*/
 	margin: 0px 24px;
 	font-size: 1.1em;
-
 }
 ul.navBottum{
 	padding-right: 24px;
 }
 
+
 /*------------------------------side bar-----------------------*/
-/*.sideBar{
-	position: fixed;
-	top: 15%;
-	right: 10%;
-	list-style-type: none;
-}
-.sideBarIcon img{
-	width: 48px;
-	margin: 8px 0px;
-	opacity: 0.5;
-}*/
 
 .sideBarIcon img{
 	width: 48px;
@@ -134,18 +153,7 @@ ul.navBottum{
 	z-index: 99;
 }
 
-/*#sideBarButtom1, #sideBarButtom1 + a{
-	top: 15%;
-}
-#sideBarButtom2, #sideBarButtom2 + a{
-	top: 25%;
-}
-#sideBarButtom3, #sideBarButtom3 + a{
-	top: 35%;
-}
-#sideBarButtom4, #sideBarButtom4 + a{
-	top: 45%;
-}*/
+/*set the position of side bar icon*/
 #sideBarButtom1{
 	top:15%;
 }
@@ -162,68 +170,14 @@ ul.navBottum{
 	opacity: 1;
 }
 
-
-
-/*-Smooth transition-*/
-/*#sideBarButtom1:checked ~ .mainContent{
-	-webkit-transform:translateY(-10%);
-	-moz-transform:translateY(-10%);
-	-o-transform:translateY(-10%);
-	-ms-transform:translateY(-10%);
-	transform:translateY(-10%);
-}
-#sideBarButtom2:checked ~ .mainContent{
-	-webkit-transform:translateY(-20%);
-	-moz-transform:translateY(-20%);
-	-o-transform:translateY(-20%);
-	-ms-transform:translateY(-20%);
-	transform:translateY(-20%);
-}
-#sideBarButtom3:checked ~ .mainContent{
-	-webkit-transform:translateY(-30%);
-	-moz-transform:translateY(-30%);
-	-o-transform:translateY(-30%);
-	-ms-transform:translateY(-30%);
-	transform:translateY(-30%);
-}
-#sideBarButtom4:checked ~ .mainContent{
-	-webkit-transform:translateY(-40%);
-	-moz-transform:translateY(-40%);
-	-o-transform:translateY(-40%);
-	-ms-transform:translateY(-40%);
-	transform:translateY(-40%);
-}
-.mainContent{
-	-webkit-transform:translate3d(0,0,0);
-	-moz-transform:translate3d(0,0,0);
-	-o-transform:translate3d(0,0,0);
-	-ms-transform:translate3d(0,0,0);
-	transform:translate3d(0,0,0);
-	-webkit-backface-visibility : hidden;
-	-moz-transition :all 0.6s ease-in-out;
-	-o-transition :all 0.6s ease-in-out;
-	-webkit-transition :all 0.6s ease-in-out;
-	-ms-transition :all 0.6s ease-in-out;
-	transition :all 0.6s ease-in-out;
-}
-.mainPart{
-	position: relative;
-}
-*/
-
-
-/*-------------------------------------------------------------*/
-/*main content*/
-/*.mainPart{
-	box-sizing: border-box;
-}*/
+/*----------------------set main content of page------------------------------*/
 
 .BG_Picture{
+	/*content picture*/
 	width: 100%;
 	max-height: 10%;
 	z-index: 1;
 	margin: 0px 0px -4px 0px;
-
 }
 
 .mainParts{
@@ -235,24 +189,12 @@ ul.navBottum{
 	position: static;
 	height: 450px;
 }
-a:active{
-	color: #b2dfdb;
-}
-a:link{
-	color: #1de9b6;
-}
-a:hover{
-	color: #a7ffed;
-}
-
-a:visited{
-	color: #00bfa5;
-}
 
 
 
 
 #firstPart{
+	/*set the animation*/
 	transition: all 1s ease;
 	-moz-transition: all 0.6s ease;
 	-webkit-transition: all 0.6s ease;
@@ -273,6 +215,7 @@ a:visited{
 
 
 #firstPart>h1{
+	/*set the text style*/
 	width: 50%;
 	text-align: center;
 	position: absolute;
@@ -318,7 +261,10 @@ address{
 	width: 100%;
 	background-color: #00acc1;
 	display: inline-flex;
+	display: -webkit-inline-flex;
 	justify-content: space-between;
+	-moz-justify-content: space-between;
+	-webkit-justify-content: space-between;
 	left: 48px;
 	height: 20%;
 	box-shadow: inset 5px 5px 4px 0px rgba(151,24,64,0.2);
@@ -331,3 +277,4 @@ address>p{
 	margin: 0;
 	padding: 1.5em;
 }
+/*-----------------homeStyle.css end-------------------------*/
