--- a/otherStyle.css
+++ b/otherStyle.css
@@ -1,19 +1,32 @@
-/*FileName: informationStyle*/
-.mainParts{
+/*FileName: otherStyle.css*/
+/*This file is used to style information.html, hobbies.html,travel.html */
+/*Author: CHAOS*/
+/*2017/3/28*/
+
+/*----------------------set the background---------------------------*/
+.mainParts{						
 	background-size: cover;
 	width: 100%;
 	height: 100%;
 	margin: 0;
 	padding:0;
 	display: flex;
+	display: -webkit-flex;
+
 	flex-direction: column;
+	-moz-flex-direction: column;
+	-webkit-flex-direction: column;
+
 	justify-content: center;
+	-moz-justify-content: center;
+	-webkit-justify-content: center;
+
 	align-items: center;
+	-webkit-align-items: center;
 	background-attachment: fixed;
 }
 #informationMain{
 	background-image: url(img/informationBackground.png);
-
 }
 #hobbiesMain{
 	background-image: url(img/hobbyBackground.png);
@@ -21,34 +34,52 @@
 #travelMain{
 	background-image: url(img/travelBackground.jpg);
 }
+
+
+/*-----------------------content setting----------------------*/
+
 .articalContainer{
 	width: 100%;
 	display: flex;
-	justify-content: center;
+	display: -webkit-flex;
+
 	flex-direction: column;
+	-webkit-flex-direction: column;
+	-ms-flex-direction: column;
+	-moz-flex-direction: column;
+
+	justify-content: center;
+	-moz-justify-content: center;
+	-webkit-justify-content: center;
+	
 	align-items: center;
+	-webkit-align-items: center;
 }
-
-
 .articalContainer>div{
 	display: inline-flex;
+	display: -webkit-inline-flex;
+
 	justify-content: center;
+	-moz-justify-content: center;
+	-webkit-justify-content: center;
+
 	flex-grow: 1;
+	-moz-flex-grow: 1;
+	-webkit-flex-grow: 1;
 }
 .tableContainer{
-	/*position: absolute;
-	left: 12.5%;
-	top:12%;*/
 	width: 75%;
 	margin-top: 64px;
 	padding-bottom: 64px;
-
 }
+
 #hobbiesMain>.headtitle,
 #travelMain>.headtitle{
 	align-self: flex-start;
+	-webkit-align-self: flex-start;
 	margin: 3% 0% 2% 12.5%;
 }
+
 #hobbyPart1,
 #hobbyPart2,
 #hobbyPart3,
@@ -57,8 +88,9 @@
 #travelPart3
 {
 	width: 75%;
-	height: 50%;
+	/*height: 50%;*/
 	display: inline-flex;
+	display: -webkit-inline-flex;
 	margin-bottom: 8px;
 }
 #hobbyPart3,
@@ -66,12 +98,6 @@
 	margin-bottom: 24px;
 }
 
-/*.hobbyImg{
-	flex-grow: 6;
-}
-.hobbyText{
-	flex-grow: 4;
-}*/
 #hobbyPart1>.hobbyImg,
 #travelPart2>.travelImg,
 #hobbyPart3>.hobbyImg{
@@ -86,43 +112,22 @@
 	margin-top: 40%;
 }
 
-/*#hobbyPart1>.hobbyImg{
-	background-image: url(img/hobby1.jpg);
-	background-size: contain;
-	background-repeat: no-repeat;
-	margin: 10px;
-}
-#hobbyPart2>.hobbyImg{
-	background-image: url(img/hobby2.jpg);
-	background-size: contain;
-	background-repeat: no-repeat;
-	margin: 10px;
-}
-#hobbyPart3>.hobbyImg{
-	background-image: url(img/hobby3.jpg);
-	background-size: contain;
-	background-repeat: no-repeat;
-	margin: 10px;
-}
-*/
-
 .hobbyImg >img,
 .travelImg >img
 {
-	/*background-image: url(img/hobby1.jpg);*/
 	width: 100%;
-	/*height: 80%;*/
 }
 
 
-
-
-
-
+/*------------------table setting for information.html----------------*/
 .inforTable{
 	width: 100%;
 	display: flex;
+	display: -webkit-flex;
+
 	justify-content: center;
+	-moz-justify-content: center;
+	-webkit-justify-content: center;
 }
 table{
 	border-collapse: collapse;
@@ -142,7 +147,4 @@ td,th{
 	padding: 18px;
 }
 
-/*address>a>img{
-	height: 2em;
-	padding: 1.2em;
-}*/
+/*--------------------------otherStyle.css end-----------------------*/
